--- a/section_2/tsconfig.json
+++ b/section_2/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "commonjs",
-    "target": "es5",
+    "module": "CommonJS",
     "sourceMap": true,
-    "alwaysStrict": true,
-    "noImplicitAny": true,
-    "downlevelIteration": true,
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "lib": [
+      "es6",
+      "dom"
+    ]
+  }
 }
